k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-redis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nestjs-redis
  template:
    metadata:
      labels:
        app: nestjs-redis
    spec:
      containers:
        - name: app
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 3000
