k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
  labels:
    app: nestjs-app
spec:
  type: ClusterIP
  selector:
    app: nestjs-app
  ports:
    - port: 80
      targetPort: 3000
