k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-redis
spec:
  selector:
    app: nestjs-redis
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
